[tool.poetry]
name = "order_profit"
version = "0.1.0"
description = "Profit/Loss data from Cloud Commerce Pro orders."
authors = ["Luke Shiner <luke@lukeshiner.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
tabler = "^2.4.0"
ccapi = {git = "https://github.com/stcstores/ccapi.git"}

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
flake8-docstrings = "^1.5.0"
black = "^19.10b0"
pytest = "^5.3.5"
pytest-cov = "^2.8.1"
coveralls = "^1.10.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
